[package]
name = "nexuszero-e2e"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Protocol Team"]
publish = false

[lib]
name = "nexuszero_e2e"
path = "src/lib.rs"

[[test]]
name = "e2e_suite"
path = "tests/e2e_suite.rs"
harness = true

[dependencies]
# Core dependencies for testing
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bincode = "1.3"

# Test utilities
rand = { workspace = true }

# Real NexusZero modules for E2E integration
nexuszero-crypto = { path = "../../nexuszero-crypto" }
nexuszero-holographic = { path = "../../nexuszero-holographic" }

# Additional dependencies for integration
rayon = "1.10"
futures = { workspace = true }

[dev-dependencies]
# Additional test dependencies
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
expensive-tests = []  # Enable with --features expensive-tests
